--- a/.github/workflows/dev.deploy.yaml
+++ b/.github/workflows/dev.deploy.yaml
@@ -9,6 +9,9 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    environment:
+      name: development
+      url: ${{ vars.URL }}
     steps:
       - uses: actions/checkout@v2
       - name: Install Vercel CLI
